--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "vue": "^2.6.11",
     "vue-jest": "^3.0.5",
     "vuepress": "^1.3.1",
-    "vuepress-plugin-code-box": "^0.0.4"
+    "vuepress-plugin-code-box": "^0.0.4",
+    "vuepress-plugin-demo-code": "^0.5.0"
   },
   "browserslist": [
     "defaults"
